--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ project.dependencies {
     implementation("javax.servlet:javax.servlet-api:${servletApiVersion}") // originally 3.1.0
     aspectj "org.aspectj:aspectjtools:${aspectjVersion}"
     implementation "org.slf4j:slf4j-log4j12:${slf4jLog4j12Version}" // Suppresses unwanted logging from remoteapi and webdriver
+    implementation "org.apache.logging.log4j:log4j-core:${log4j2Version}"
+    implementation "org.apache.logging.log4j:log4j-iostreams:${log4j2Version}"
     api "com.github.lookfirst:sardine:${project.lookfirstSardineVersion}"
     api "com.googlecode.json-simple:json-simple:${jsonSimpleVersion}"
     //implementation "javax.xml.bind:jaxb-api:${jaxbVersion}"
@@ -114,6 +116,9 @@ if (!BuildUtils.isIntellij())  {
             java {
                 srcDirs = ["src"]
                 exclude "test/tests/**"
+            }
+            resources {
+                srcDirs = ["resources"]
             }
         }
     }
