--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ jettyRepackagedVersion=9.4.12.v20180830
 seleniumVersion=4.1.1
 mockserverNettyVersion=5.5.1
 
-labkeySchemasTestVersion=21.7.0
+labkeySchemasTestVersion=22.3-SNAPSHOT
