--- a/build.gradle
+++ b/build.gradle
@@ -205,6 +205,7 @@ if (project.hasProperty('doPublishing'))
                         }
                         defaults
                                 {
+                                    publishBuildInfo = false
                                     publishPom = true
                                     publishIvy = false
                                 }
