--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,11 @@ def initPropertiesTask = project.tasks.register("initProperties", Task) {
         })
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+             "--add-opens=java.base/java.util=ALL-UNNAMED"])
+}
+
 project.tasks.uiTests.dependsOn(initPropertiesTask)
 project.parent.parent.tasks.ijConfigure.dependsOn(initPropertiesTask)
 
